--- a/templates/base.html
+++ b/templates/base.html
@@ -129,7 +129,7 @@
             <path d="M4 15l2-2 4 4 4-4 2 2" />
             <path d="M4 11l2-2 4 4 4-4 2 2" />
           </svg>
-          Stock News
+          Insights
         </a>
         <button
           class="navbar-toggler"
@@ -149,12 +149,9 @@
             </li>
        
             <li class="nav-item">
-              <a class="nav-link" href="/market_news">Market News</a>
+              <a class="nav-link" href="/new_market">Market News Test</a>
             </li>
-           
-            <li class="nav-item">
-              <a class="nav-link" href="/new_sector">Sector News</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="/calendar">Calendar</a>
             </li>
