--- a/templates/base.html
+++ b/templates/base.html
@@ -174,7 +174,7 @@
               <a class="nav-link" href="/simulation">Simulation</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/analytics">Analytics</a>
+              <a class="nav-link" href="/analytics">Analytic</a>
             </li>
           </ul>
         </div>
